# EloStealo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-migrations  README.md  docker-compose.yml
.sqlx/: query-17f8c64d262088677778da0fdc5e671e3b6c84deabb76206c5b919e64326198d.json  query-5e6bb175680addda50ac6138ee0c74693eee24873fdad55ff4ebd4a1689362d8.json  query-7e8c3327a1937d82b99878e8b4f3d82d9264908ee013cf38563737080d7d1b5e.json  query-87b459611982fc56a1371a49fe2a7cf072d74fcafb2297112e338c57bf9b21e7.json  query-94184c1c112845087a646d8bdb05004e2bc34e5e7b81f24fd34d9d82d84be20b.json  query-e02c6f6f5bdb36073c09b35f9b4bcc9f997c25533fd868cb175d9876bf6057a1.json  query-e873239d6b95bc54bc130b337baeac39b1fc5f1e8e738fa5a6f0d9d93000bfe6.json
api/: Cargo.toml
api/src/: configuration.rs  game_dto.rs  handlers.rs  main.rs  session_store.rs  socket_handlers.rs  ws_handlers.rs
client/: .env  .env.docker  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: GameContextProvider.tsx  SocketContext.tsx  api.ts  main.tsx  output.css  router.tsx  shared_functions.ts  types.ts
client/src/pages/: About.tsx  (+6 more)
config/: default.yaml  docker.yaml  localnetwork.yaml
domain/: Cargo.toml
domain/src/: chessgame.rs  lib.rs  move_generator.rs  movefilter.rs  stringtomove.rs
init-scripts/: init-rules.sql  init.sql  permissions.sh
migrations/: Cargo.toml  migrations.yml  rules.json
migrations/src/: main.rs
persistence/: .env  Cargo.toml
persistence/migrations/: 1_rules.sql
persistence/src/: GameRepository.rs  RulesRepository.rs  chess_dtos.rs  db.rs  elo_stealo_postgres.rs  elo_stealo_repository.rs  game_info.rs  game_model.rs  lib.rs  stealo_rule.rs
(+15 files in other folders)
