[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-server = "0.6.0"
serde = { version = "1.0.203"}
chess = "3.2.0"
domain = { path = "../domain" }
persistence = { path = "../persistence" }
uuid = { version = "1.8.0", features = ["v4"] }
mongodb = { version = "2.5.0"}
tower-sessions = "0.12.2"
tower-http = { version = "0.5.2", features = ["fs"] }
axum-macros = "0.4.1"
axum-extra = "0.9.3"
futures = "0.3.30"
socketioxide = { version="0.14.0", features=["state"] }
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.5"
config = "0.14.0"
async-timers = "0.1.4"
dashmap = "6.1.0"
jwt = "0.16.0"